nginx-exercice-1/solution/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-unprivileged

spec:
  selector:
    app: nginx-unprivileged

  ports:
  - port: 8080
    targetPort: 8080
