nginx-exercice-1/solution/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  namespace: exercice-nginx-1

spec:
  to:
    kind: Service
    name: nginx-unprivileged

  port:
    targetPort: 8080
